@@ -37,6 +37,8 @@ struct RemoteItemId
 	WCHAR wszFilename[MAX_FILENAME_LENZ];
 	WCHAR wszOwner[MAX_USERNAME_LENZ];
 	WCHAR wszGroup[MAX_USERNAME_LENZ];
+	ULONG uUid;
+	ULONG uGid;
 	DWORD dwPermissions;
 	//WORD wPadding;
 	ULONGLONG uSize;
@@ -199,6 +201,18 @@ public:
 		return Get()->wszGroup;
 	}
 
+	ULONG GetOwnerId() const throw(...)
+	{
+		ATLENSURE_THROW(IsValid(), E_UNEXPECTED);
+		return Get()->uUid;
+	}
+
+	ULONG GetGroupId() const throw(...)
+	{
+		ATLENSURE_THROW(IsValid(), E_UNEXPECTED);
+		return Get()->uGid;
+	}
+
 	ULONGLONG GetFileSize() const throw(...)
 	{
 		ATLENSURE_THROW(IsValid(), E_UNEXPECTED);
@@ -270,6 +284,8 @@ public:
 	 * @param[in] fIsFolder      Is file a folder?
 	 * @param[in] pwszOwner      Name of file owner on remote system.
 	 * @param[in] pwszGroup      Name of file group on remote system.
+	 * @param[in] uUID           Numeric ID of file owner on remote system.
+	 * @param[in] uGID           Numeric ID of file group on remote system.
 	 * @param[in] dwPermissions  Value of the file's Unix permissions bits.
 	 * @param[in] uSize          Size of file in bytes.
 	 * @param[in] dateModified   Date that file was last modified.
@@ -279,8 +295,8 @@ public:
 	 */
 	explicit CRemotePidl(
 		PCWSTR pwszFilename, bool fIsFolder=false, PCWSTR pwszOwner=L"", 
-		PCWSTR pwszGroup=L"", bool fIsLink=false, DWORD dwPermissions=0,
-		ULONGLONG uSize=0, DATE dateModified=0)
+		PCWSTR pwszGroup=L"", ULONG uUid=0, ULONG uGid=0, bool fIsLink=false,
+		DWORD dwPermissions=0, ULONGLONG uSize=0, DATE dateModified=0)
 	throw(...)
 	{
 		ATLASSERT(sizeof(RemoteItemId) % sizeof(DWORD) == 0); // DWORD-aligned
@@ -299,6 +315,8 @@ public:
 			ARRAYSIZE(item->wszFilename), pwszFilename);
 		CopyWSZString(item->wszOwner, ARRAYSIZE(item->wszOwner), pwszOwner);
 		CopyWSZString(item->wszGroup, ARRAYSIZE(item->wszGroup), pwszGroup);
+		item->uUid = uUid;
+		item->uGid = uGid;
 		item->dwPermissions = dwPermissions;
 		item->uSize = uSize;
 		item->dateModified = dateModified;
