@@ -16,6 +16,8 @@
 #define IDS_COLUMN_MODIFIED             105
 #define IDS_COLUMN_OWNER                106
 #define IDS_COLUMN_GROUP                107
+#define IDS_COLUMN_OWNER_ID             108
+#define IDS_COLUMN_GROUP_ID             109
 #define IDD_HOSTINFO_DIALOG             201
 #define IDC_HOST_GROUP                  1002
 #define IDC_USER                        1003
