@@ -101,7 +101,7 @@ protected:
 		conn.spConsumer = m_pConsumer;
 		CAbsolutePidl pidlRoot = _CreateRootRemotePidl();
 		CRemoteItem pidl(
-			L"testswishfile.ext", false, L"mockowner", L"mockgroup",
+			L"testswishfile.ext", false, L"mockowner", L"mockgroup", 1001, 1002,
 			false, 0677, 1024);
 
 		CComPtr<IDataObject> spDo = 
@@ -129,13 +129,13 @@ protected:
 		conn.spConsumer = m_pConsumer;
 		CAbsolutePidl pidlRoot = _CreateRootRemotePidl();
 		CRemoteItem pidl1(
-			L"testswishfile.ext", false, L"mockowner", L"mockgroup",
+			L"testswishfile.ext", false, L"mockowner", L"mockgroup", 1001, 1002,
 			false, 0677, 1024);
 		CRemoteItem pidl2(
-			L"testswishfile.txt", false, L"mockowner", L"mockgroup",
+			L"testswishfile.txt", false, L"mockowner", L"mockgroup", 1001, 1002,
 			false, 0677, 1024);
 		CRemoteItem pidl3(
-			L"testswishFile", false, L"mockowner", L"mockgroup",
+			L"testswishFile", false, L"mockowner", L"mockgroup", 1001, 1002,
 			false, 0677, 1024);
 		PCITEMID_CHILD aPidl[3];
 		aPidl[0] = pidl1;
@@ -215,7 +215,7 @@ protected:
 		conn.spConsumer = m_pConsumer;
 		CAbsolutePidl pidlRoot = _CreateRootRemotePidl();
 		CRemoteItem pidl(
-			L"testswishfile.ext", false, L"mockowner", L"mockgroup",
+			L"testswishfile.ext", false, L"mockowner", L"mockgroup", 1001, 1002,
 			false, 0677, 1024);
 
 		CComPtr<IDataObject> spDo = 
@@ -238,7 +238,7 @@ protected:
 		conn.spConsumer = m_pConsumer;
 		CAbsolutePidl pidlRoot = _CreateRootRemotePidl();
 		CRemoteItem pidl(
-			L"testswishfile.ext", false, L"mockowner", L"mockgroup",
+			L"testswishfile.ext", false, L"mockowner", L"mockgroup", 1001, 1002,
 			false, 0677, 1024);
 
 		CComPtr<IDataObject> spDo = 
@@ -262,13 +262,13 @@ protected:
 		conn.spConsumer = m_pConsumer;
 		CAbsolutePidl pidlRoot = _CreateRootRemotePidl();
 		CRemoteItem pidl1(
-			L"testswishfile.ext", false, L"mockowner", L"mockgroup",
+			L"testswishfile.ext", false, L"mockowner", L"mockgroup", 1001, 1002,
 			false, 0677, 1024);
 		CRemoteItem pidl2(
-			L"testswishfile.txt", false, L"mockowner", L"mockgroup",
+			L"testswishfile.txt", false, L"mockowner", L"mockgroup", 1001, 1002,
 			false, 0677, 1024);
 		CRemoteItem pidl3(
-			L"testswishFile", false, L"mockowner", L"mockgroup",
+			L"testswishFile", false, L"mockowner", L"mockgroup", 1001, 1002,
 			false, 0677, 1024);
 		PCITEMID_CHILD aPidl[3];
 		aPidl[0] = pidl1;
@@ -296,13 +296,13 @@ protected:
 		conn.spConsumer = m_pConsumer;
 		CAbsolutePidl pidlRoot = _CreateRootRemotePidl();
 		CRemoteItem pidl1(
-			L"testswishfile.ext", false, L"mockowner", L"mockgroup",
+			L"testswishfile.ext", false, L"mockowner", L"mockgroup", 1001, 1002,
 			false, 0677, 1024);
 		CRemoteItem pidl2(
-			L"testswishfile.txt", false, L"mockowner", L"mockgroup",
+			L"testswishfile.txt", false, L"mockowner", L"mockgroup", 1001, 1002,
 			false, 0677, 1024);
 		CRemoteItem pidl3(
-			L"testswishFile", false, L"mockowner", L"mockgroup",
+			L"testswishFile", false, L"mockowner", L"mockgroup", 1001, 1002,
 			false, 0677, 1024);
 		PCITEMID_CHILD aPidl[3];
 		aPidl[0] = pidl1;
@@ -334,7 +334,7 @@ protected:
 		CAbsolutePidl pidlRoot(pidlSwish, pidlHostRoot);
 
 		CRemoteItem pidl(
-			L"tmp", true, L"mockowner", L"mockgroup",
+			L"tmp", true, L"mockowner", L"mockgroup", 1001, 1002,
 			false, 0677, 1024);
 
 		CComPtr<IDataObject> spDo =
@@ -440,7 +440,7 @@ private:
 		
 		// Create root child REMOTEPIDL
 		CRemoteItem pidlRemote(
-			L"swish", true, L"owner", L"group", false, 0677, 1024);
+			L"swish", true, L"owner", L"group", 1001, 1002, false, 0677, 1024);
 
 		// Concatenate to make absolute pidl to RemoteFolder root
 		return CAbsolutePidl(pidlHost, pidlRemote);
